Fixed vertical spacing

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -8,11 +8,9 @@
 @import "susy";
 
 $base-font-size: 16px;
-$base-line-height: 6px;
 @include establish-baseline;
 
 html {
-    @include adjust-leading-to(3);
     font-family: 'Roboto Slab', serif;
 }
 
@@ -28,7 +26,7 @@ h1, h2 {
 
 h2 {
     @include adjust-font-size-to(24px);
-    margin: rhythm(4, 24px) auto;
+    margin: rhythm() auto;
     text-align: center;
     background-image: url(/images/heading.png);
     background-repeat: no-repeat;
@@ -96,3 +94,9 @@ header {
     .wrapper p:first-child { margin-top: 0 };
 }
 
+section {
+    @include rhythm-padding();
+    @include rhythm-margins();
+    padding-left: gutter();
+    padding-right: gutter();
+}
